syntax = "proto3";

package raft;

message vote_request
{
	uint64 req_id = 1;
	uint64 term = 2;
	string candidate = 3;
	uint64 last_log_index = 4;
	uint64 last_log_term = 5;
}

message vote_response
{
	uint64 req_id = 1;
	uint64 term = 2;
	bool vote_granted = 3;
	bool log_ok = 4;
}
enum log_entry_type
{
	e_raft_log = 0;
	e_configuration = 1;
};
message log_entry
{
	uint64 index = 1;
	uint64 term = 2;
	log_entry_type type = 3;
	string log_data = 4;
}

message replicate_log_entries_request
{
	uint64 req_id = 1;
	uint64 term = 2;
	string leader_id = 3;
	uint64 prev_log_index = 4;
	uint64 prev_log_term = 5;
	uint64 leader_commit = 6;
	repeated log_entry entries = 7;
};

message replicate_log_entries_response
{
	uint64 req_id = 1;
	uint64 term = 2;
	uint64 last_log_index = 3;
	bool success = 4;
};

message snapshot_info
{
	fixed64 last_snapshot_index = 1;
	fixed64 last_included_term = 2;
}


message install_snapshot_request
{
	uint64 req_id = 1;
	uint64 term = 2;
	snapshot_info snapshot_info = 3;
	uint64 offset = 4;
	bool done = 5;
	string leader_id = 6;
	string data = 7 ;
};

message install_snapshot_response
{
	uint64 req_id = 1;
	uint64 term = 2;
	uint64 bytes_stored = 3;
};